apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__interface_fragment-3.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: doc
---
query {
  topProducts {
    type
  }
  itf {
    id
    ...F
  }
}
fragment F on User {
  name
}

