apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__interface_inline_fragment-6.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: doc
---
query {
  topProducts {
    type
  }
  itf {
    id
    ... on User {
      id2: id
      name
    }
  }
}

